learning header paragraph on HTML5

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Chutpipat Chaichomnan</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!--ข้อมูลพื้นฐานของเว็บไซต์-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="เว็บเกี่ยวกับประวัติทีมปีศาจแดง แมนเชสเตอร์ยูไนเต้ด">
+    <meta name="author" content="ฉัตรพิพัฒน์ ชัยชำนาญ">
+    <meta name="keywords" content="แมนเชสเตอร์ยูไนเต้ด">
+    <!--หัวข้อหน้าเว็บของเรา-->
+    <title>ยินดีต้อนรับสู่เว็บไซต์ของเรา</title>
+</head>
+<body>
+    <h1>แมนเชสเตอร์ยูไนเต้ด</h1> <!--หัวข้อเรื่อง-->
+    <h2>ประวัติของแมนเชสเตอร์ยูไนเต้ด</h2>
+    <p><b>สโมสรฟุตบอลแมนเชสเตอร์ ยูไนเต้ด</b> ก่อตั้งขึ้นครั้งแรกในปี 1878 โดยใช้ชื่อ นิวตัน ฮีต แอลวายอาร์ : Newton Heath
+       LYR (Lancashire and Yorkshire Railway) เกิดจากพนักงานการรถไฟกลุ่มหนึ่งได้ก่อตั้งทีมฟุตบอลขึ้นมาลงเล่น
+       กับแผนกและบริาัทรถไฟอื่นๆ โดยพวกเขาพยายามเข้าร่วมฟุตบอลลีกสองครั้งแต่ก็ล้มเหลว เพราะไม่มีสโมสรใดให้การ
+       สนับสนุน แต่ในที่สุดพวกเขาได้รับการยอมรับเมื่อฟุตบอลลีกมีการแบ่งออกเป็นสองดิวิชั่นในเวลาต่อมาไม่นาน</p>
+    <a href="http://www.google.com" target="_blank">เปิดเว็บกู้เกิ้ล</a> <!-- เปิดเว็บค้นหา -->
+</body>
+</html>
+
+
